objects/Price_Request_Parts__c.object
<CustomObject>
    <fields>
        <fullName>Price_Requests__c</fullName>
        <label>Price Requests</label>
        <referenceTo>Price_Requests__c</referenceTo>
        <relationshipLabel>Price Request Parts</relationshipLabel>
        <relationshipName>Price_Request_Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>approved_amt__c</fullName>
        <label>Approved Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>approved_dscrptn__c</fullName>
        <label>Approval Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approved_uom__c</fullName>
        <label>Approval Unit of Measure</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approver_name__c</fullName>
        <label>Approver Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>competitor_code__c</fullName>
        <label>Competitor Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>competitor_name__c</fullName>
        <label>Competitior Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>competitor_part__c</fullName>
        <label>Competitor Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_remarks__c</fullName>
        <label>Customer Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gpl__c</fullName>
        <label>GPL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>min_ord_qty__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>min_rls_qty__c</fullName>
        <label>Minimum Release Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>part_description__c</fullName>
        <label>Part Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prod_code__c</fullName>
        <label>Product Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_owning_business_unit__c</fullName>
        <label>Product Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_owning_sub_unit__c</fullName>
        <label>Product Business Sub Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_desc__c</fullName>
        <label>Project Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>regional_prod_mgr_name__c</fullName>
        <label>Product Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requested_qty__c</fullName>
        <label>Requested Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>requested_unitized_price__c</fullName>
        <label>Requested Unitized Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>selection_indicator_dscrptn__c</fullName>
        <label>Selection Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tyco_electronics_corp_part_nbr__c</fullName>
        <label>Part Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unitized_approved_price__c</fullName>
        <label>Unitized Approved Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>unitized_book_price__c</fullName>
        <label>Unitized Book Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>unitized_customer_price__c</fullName>
        <label>Unitized Customer Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <label>Price Request Parts</label>
    <nameField>
        <label>Price Request Part</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Request Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>